Se actualizan valores en pantalla cada nueva ronda

--- a/BullsEyeGame/BullsEyeGame/Base.lproj/Main.storyboard
+++ b/BullsEyeGame/BullsEyeGame/Base.lproj/Main.storyboard
@@ -103,6 +103,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="slider" destination="LP7-Oj-Mi2" id="Hc4-kl-vWv"/>
+                        <outlet property="targetLabel" destination="y6R-fM-bsA" id="GvM-cr-vZR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
