--- a/BullsEyeGame/BullsEyeGame/Base.lproj/Main.storyboard
+++ b/BullsEyeGame/BullsEyeGame/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="69" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y6R-fM-bsA">
-                                <rect key="frame" x="462" y="20" width="21" height="21"/>
+                                <rect key="frame" x="462" y="20" width="40" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -104,6 +104,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="roundLabel" destination="mUL-Lv-uiL" id="bev-j1-YqM"/>
+                        <outlet property="scoreLabel" destination="Iwh-nr-a7U" id="xFX-yM-mam"/>
                         <outlet property="slider" destination="LP7-Oj-Mi2" id="Hc4-kl-vWv"/>
                         <outlet property="targetLabel" destination="y6R-fM-bsA" id="GvM-cr-vZR"/>
                     </connections>
